<resources>
    <string name="app_name">QQSM</string>
    <string name="hint_nombre" />
    <string name="hint_correo" />
    <string name="hint_usuario" />
    <string name="accion_cancelar" />
    <string name="accion_aceptar" />
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
</resources>